Fix notification dropdown layout issues

--- a/common/common.scss
+++ b/common/common.scss
@@ -3454,14 +3454,17 @@ div.menu-links-header .menu-links-row {
   outline: 0;
 }
 .user-menu .notifications li a div {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+}
+.user-menu .notifications li a div > span {
+  margin-right: 8px;
 }
 .user-menu .notifications li i {
   margin-right: 8px;
